Refactored body creation and wrote some real tests

--- a/src/PostLog.Tests/app.config
+++ b/src/PostLog.Tests/app.config
@@ -6,7 +6,8 @@
 
 	<log4net>
 		<appender name="HttpAppender" type="PostLog.HttpAppender">
-			<uri value="http://localhost:34343/" />
+			<uri value="http://localhost:34343/testlog" />
+			<formatterType value="PostLog.JsonBodyFormatter, PostLog" />
 			<parameter>
 				<name value="date" />
 				<layout type="log4net.Layout.RawTimeStampLayout" />
