--- a/src/PostLog/PostLog.csproj
+++ b/src/PostLog/PostLog.csproj
@@ -80,9 +80,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBodyFormatter.cs" />
     <Compile Include="HttpAppender.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="HttpAppenderAttribute.cs" />
+    <Compile Include="IBodyFormatter.cs" />
+    <Compile Include="JsonBodyFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlBodyFormatter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
