--- a/src/PostLog.Tests/PostLog.Tests.csproj
+++ b/src/PostLog.Tests/PostLog.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BodyFormatterTests.cs" />
     <Compile Include="HttpAppenderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
