--- a/src/PostLog.Tests/app.config
+++ b/src/PostLog.Tests/app.config
@@ -6,8 +6,10 @@
 
 	<log4net>
 		<appender name="HttpAppender" type="PostLog.HttpAppender">
-			<uri value="http://localhost:34343/testlog" />
-			<formatterType value="PostLog.JsonBodyFormatter, PostLog" />
+			<uri value="http://localhost:34343/testlog"/>
+			<userid value="derp" />
+			<password value="darp" />
+			<formatterType value="PostLog.JsonBodyFormatter, PostLog"/>
 			<parameter>
 				<name value="date" />
 				<layout type="log4net.Layout.RawTimeStampLayout" />
